Squashed huge bug in pre-forking and WS registration

--- a/post_targets.ipynb
+++ b/post_targets.ipynb
@@ -19,6 +19,27 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
+     "prompt_number": 45
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "reply = requests.post('https://127.0.0.1:8980/managers', data=json.dumps({'email': 'proteneer@gmail.com',\n",
+      "                                                             'password': 'foo'}), verify=False)\n",
+      "print(reply.status_code)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "500\n"
+       ]
+      }
+     ],
      "prompt_number": 48
     },
     {
@@ -37,7 +58,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "{'token': 'c8e0f9ef-d30c-4ba8-ab95-ebbb3c740b7c'}\n"
+        "{'token': 'b6fb9cd5-2a60-43c2-ab61-996980acb26b'}\n"
        ]
       }
      ],
@@ -65,11 +86,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "b'{\"target_id\": \"f548de0f-1d5f-4bea-8dd7-a5b4097ffa6c\"}'\n"
+        "b'{\"target_id\": \"cb12c6d7-3f63-4290-be33-2f27e42af322\"}'\n"
        ]
       }
      ],
-     "prompt_number": 62
+     "prompt_number": 54
     },
     {
      "cell_type": "code",
@@ -80,12 +101,28 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 63
+     "prompt_number": 55
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "target_id = json.loads(reply.content.decode())['targets'][0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 52
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "reply = requests.post('https://127.0.0.1:8980/streams', headers={'Authorization': auth['token']}, verify=False,\n",
+      "                      data=json.dumps({'target_id': target_id,\n",
+      "                                       'files': {'state.xml.gz.b64':  base64.b64encode(os.urandom(24)).decode()}\n",
+      "                                       })\n",
+      "                      )\n",
       "print(reply.content)"
      ],
      "language": "python",
@@ -95,11 +132,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "b'{\"targets\": [\"746e62da-31b2-4663-860c-36e6a8fa5676\", \"61be8930-e6fd-4b98-8382-0d0540728c02\", \"4983ed3a-294b-4d9f-ae25-b03535b5d068\", \"2916c9d8-dfd1-4241-abcf-b1eed396097a\"]}'\n"
+        "b'{\"stream_id\": \"911b8985-9094-4158-8578-ad4786fc844a\"}'\n"
        ]
       }
      ],
-     "prompt_number": 61
+     "prompt_number": 75
     },
     {
      "cell_type": "code",
