--- a/post_targets.ipynb
+++ b/post_targets.ipynb
@@ -21,7 +21,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 100
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -42,7 +42,7 @@
        ]
       }
      ],
-     "prompt_number": 101
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -60,11 +60,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "{'token': '362465b3-58e1-48d4-a04d-1ae9599ed123'}\n"
+        "{'token': '32e192b7-ab51-428c-84b6-e6076430c7da'}\n"
        ]
       }
      ],
-     "prompt_number": 102
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -76,7 +76,7 @@
       "                      data=json.dumps({'description': 'foo',\n",
       "                                       'engine': 'openmm',\n",
       "                                       'engine_versions': ['6.0'],\n",
-      "                                       'steps_per_frame': 100000,\n",
+      "                                       'steps_per_frame': 10000,\n",
       "                                       'files': {'system.xml.gz.b64': base64.b64encode(gzip.compress(system_xml)).decode(),\n",
       "                                                 'integrator.xml.gz.b64': base64.b64encode(gzip.compress(integrator_xml)).decode()}\n",
       "                                       })\n",
@@ -90,22 +90,31 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "b'{\"target_id\": \"02c8f478-710f-4249-ab00-9dcbb70352ad\"}'\n"
+        "b'{\"target_id\": \"2bf5c0b9-c555-41b2-9136-694d5893e8d9\"}'\n"
        ]
       }
      ],
-     "prompt_number": 103
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "reply = requests.get('https://127.0.0.1:8980/targets', verify=False)"
+      "reply = requests.get('https://127.0.0.1:8980/targets', verify=False)\n",
+      "print(reply.content)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 104
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "b'{\"targets\": [\"2bf5c0b9-c555-41b2-9136-694d5893e8d9\"]}'\n"
+       ]
+      }
+     ],
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -116,7 +125,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 105
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -133,7 +142,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 106
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -172,11 +181,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "{'uri': 'https://127.0.0.1:8960/core/start', 'token': '8728dc86-2c19-4f99-8175-1fd5737b6f51'}\n"
+        "{'stream_id': '459e1261-988e-4b00-b03d-bdd4b822f3dc'}\n"
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 130
     },
     {
      "cell_type": "code",
@@ -186,8 +195,19 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 26
+     "outputs": [
+      {
+       "ename": "KeyError",
+       "evalue": "'uri'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-131-4d22fb1580d6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mreply\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'uri'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'Authorization'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mcontent\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'token'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverify\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mKeyError\u001b[0m: 'uri'"
+       ]
+      }
+     ],
+     "prompt_number": 131
     },
     {
      "cell_type": "code",
